wanglei: ported MMPU
git-svn-id: file:///opt/svnrepo/mapu/toolchains/trunk@11 cb94f8c2-beb9-42d2-aaaf-6dc30ea5c36a

--- a/llvm-3.5/Makefile.rules
+++ b/llvm-3.5/Makefile.rules
@@ -1721,6 +1721,53 @@ $(TARGET:%=%.td.expanded): \
 
 clean-local::
 	-$(Verb) $(RM) -f $(INCFiles) $(TARGET).td.expanded
+################## MaPU-specific Makefile rules ################
+#### XXXGenInstrFLexer.flex
+FLexerFile := $(filter %.flex, $(BUILT_SOURCES))
+FLexerTmpFile := $(FLexerFile:%=$(ObjDir)/%.tmp)
+
+#### XXXGenInstrRLexer.ragel
+RLexerFile := $(filter %.ragel, $(BUILT_SOURCES))
+RLexerTmpFile := $(RLexerFile:%=$(ObjDir)/%.tmp)
+
+#### XXXGenInstrParser.bison
+ParserFile:= $(filter %.bison, $(BUILT_SOURCES))
+ParserTmpFile := $(ParserFile:%=$(ObjDir)/%.tmp)
+################################################################
+
+################## MaPU-specific Makefile rules ################
+$(FLexerFile) : %.flex : $(ObjDir)/%.flex.tmp
+	$(Verb) $(CMP) -s $@ $< || $(CP) $< $@
+
+$(RLexerFile) : %.ragel : $(ObjDir)/%.ragel.tmp
+	$(Verb) $(CMP) -s $@ $< || $(CP) $< $@
+
+$(ParserFile) : %.bison : $(ObjDir)/%.bison.tmp
+	$(Verb) $(CMP) -s $@ $< || $(CP) $< $@
+################################################################
+
+################## MaPU-specific Makefile rules ################
+# Generate custom instruction token lexer for MaPU
+$(TARGET:%=$(ObjDir)/%GenInstrFLexer.flex.tmp): \
+$(ObjDir)/%GenInstrFLexer.flex.tmp : AsmParser/%InstrFLexer.l  $(ObjDir)/.dir
+	$(Echo) "Building $(<F) for assembly instruction lexer with flex"
+	$(Verb) flex  -o  $(call SYSPATH, $@)  $<
+
+# Generate custom instruction token lexer for MaPU
+$(TARGET:%=$(ObjDir)/%GenInstrRLexer.ragel.tmp): \
+$(ObjDir)/%GenInstrRLexer.ragel.tmp : AsmParser/%InstrRLexer.rl  $(ObjDir)/.dir
+	$(Echo) "Building $(<F) for assembly instruction lexer with ragel"
+	$(Verb) $(RAGEL)  -o  $(call SYSPATH, $@)  $<
+
+# Generate custom instruction parser for MaPU
+$(TARGET:%=$(ObjDir)/%GenInstrParser.bison.tmp): \
+$(ObjDir)/%GenInstrParser.bison.tmp : AsmParser/%InstrParser.y $(ObjDir)/.dir
+	$(Echo) "Building $(<F) for assembly instruction parser with bison"
+	$(Verb) bison -v -g -r state,lookahead,itemset -o $(call SYSPATH, $@) $<
+################################################################
+
+clean-local::
+	-$(Verb) $(RM) -f $(INCFiles) $(FLexerFile) $(RLexerFile) $(ParserFile)
 
 endif # TARGET
 
