wanglei: fix inconsistency between RTL and Simulator models
git-svn-id: file:///opt/svnrepo/mapu/toolchains/trunk@34 cb94f8c2-beb9-42d2-aaaf-6dc30ea5c36a

--- a/llvm-3.5/Makefile
+++ b/llvm-3.5/Makefile
@@ -91,7 +91,10 @@ endif
 # Use NO_INSTALL define of the Makefile of each directory for deciding
 # if the directory is installed or not
 ifeq ($(MAKECMDGOALS),install)
-  OPTIONAL_DIRS := $(filter bindings, $(OPTIONAL_DIRS))
+# ARCH_MAPU
+  # OPTIONAL_DIRS := $(filter bindings, $(OPTIONAL_DIRS))
+  OPTIONAL_DIRS := $(filter bindings projects, $(OPTIONAL_DIRS))
+# end of ARCH_MAPU
 endif
 
 # Don't build unittests when ONLY_TOOLS is set.
