wanglei: add MapuMem trace
git-svn-id: file:///opt/svnrepo/mapu/toolchains/trunk@110 cb94f8c2-beb9-42d2-aaaf-6dc30ea5c36a

--- a/MaPUSim/APC/src/mem/SConscript
+++ b/MaPUSim/APC/src/mem/SConscript
@@ -75,6 +75,7 @@ DebugFlag('LLSC')
 DebugFlag('MMU')
 DebugFlag('MemoryAccess')
 DebugFlag('PacketQueue')
+DebugFlag('MapuMem')
 
 DebugFlag('ProtocolTrace')
 DebugFlag('RubyCache')
