wanglei: fix llvm Makefile; add fake prcm
git-svn-id: file:///opt/svnrepo/mapu/toolchains/trunk@257 cb94f8c2-beb9-42d2-aaaf-6dc30ea5c36a

--- a/llvm-3.5/projects/Makefile
+++ b/llvm-3.5/projects/Makefile
@@ -24,6 +24,11 @@ DIRS := $(filter-out libcxx,$(DIRS))
 DIRS := $(filter-out dragonegg,$(DIRS))
 
 # ARCH_MAPU
+ifneq ($(findstring MMPULite,$(TARGETS_TO_BUILD)),)
 DIRS := mmcc/apdlgen $(DIRS) 
+else
+DIRS := $(filter-out mmcc,$(DIRS))
+endif
 # end of ARCH_MAPU
+
 include $(PROJ_SRC_ROOT)/Makefile.rules
