wanglei: add MaPU APC support
git-svn-id: file:///opt/svnrepo/mapu/toolchains/trunk@314 cb94f8c2-beb9-42d2-aaaf-6dc30ea5c36a

--- a/kernel/drivers/Makefile
+++ b/kernel/drivers/Makefile
@@ -134,3 +134,6 @@ obj-$(CONFIG_VIRT_DRIVERS)	+= virt/
 obj-$(CONFIG_HYPERV)		+= hv/
 
 obj-$(CONFIG_PM_DEVFREQ)	+= devfreq/
+
+# MaPU Algebra Processing Cluster
+obj-$(CONFIG_APC)	+= apc/
