wanglei: finish the first version of apc driver. Untested\!
git-svn-id: file:///opt/svnrepo/mapu/toolchains/trunk@317 cb94f8c2-beb9-42d2-aaaf-6dc30ea5c36a

--- a/kernel/.config
+++ b/kernel/.config
@@ -822,6 +822,11 @@ CONFIG_DW_APB_TIMER=y
 # CONFIG_PM_DEVFREQ is not set
 
 #
+# MaPU Algebra Processing Cluster
+#
+CONFIG_APC=y
+
+#
 # File systems
 #
 # CONFIG_EXT2_FS is not set
