luoxq: u-boot transplant to MaPU, based on v2015.10
git-svn-id: file:///opt/svnrepo/mapu/toolchains/branches/luoxq@376 cb94f8c2-beb9-42d2-aaaf-6dc30ea5c36a

Former-commit-id: 1485346740db4e4fbe95847ab8022dfaf18370a4

--- a/u-boot/Makefile
+++ b/u-boot/Makefile
@@ -1563,6 +1563,15 @@ endif
 %.symtypes: %.c prepare scripts FORCE
 	$(Q)$(MAKE) $(build)=$(build-dir) $(target-dir)$(notdir $@)
 
+# MaPU
+%.bison.o: %.y prepare scripts FORCE
+	$(Q)$(MAKE) $(build)=$(build-dir) $(target-dir)$(notdir $@)
+%.h: %.y prepare scripts FORCE
+	$(Q)$(MAKE) $(build)=$(build-dir) $(target-dir)$(notdir $@)
+%_lexer.ragel.o: %_parser.h %_lexer.rl prepare scripts FORCE
+	$(Q)$(MAKE) $(build)=$(build-dir) $(target-dir)$(notdir $@)
+
+
 # Modules
 /: prepare scripts FORCE
 	$(cmd_crmodverdir)
