luoxq: added netwirk support to qemu, kernel and ubuntu
git-svn-id: file:///opt/svnrepo/mapu/toolchains/branches/luoxq@380 cb94f8c2-beb9-42d2-aaaf-6dc30ea5c36a

Former-commit-id: a16220bfa543e6e22485e4eeb68fcb683fbb2a24

--- a/kernel/arch/arm/boot/dts/mapu_sim.dts
+++ b/kernel/arch/arm/boot/dts/mapu_sim.dts
@@ -60,12 +60,12 @@
 		};
 		uImage@100000 {
 			label ="kernel";
-			reg = <0x100000 0x200000>;
+			reg = <0x100000 0x900000>;
 			read-only;
 		};
 		fs@300000 {
 			label ="jffs2";
-			reg = <0x300000 0x1fd00000>;
+			reg = <0xa00000 0x1fd00000>;
 		};
 	};
 	
@@ -108,6 +108,12 @@
       num-apes = <4>;
       reg = <0x41000000 0x400000>, <0x41400000 0x400000>, <0x41800000 0x400000>, <0x41C00000 0x400000>;
       interrupts = <0 42 0x4>, <0 43 0x4>, <0 44 0x4>, <0 45 0x4>, <0 46 0x4>, <0 47 0x4>, <0 48 0x4>, <0 49 0x4>;
+    };
+    
+    net@50c00000 {
+      compatible = "smsc,lan91c111";
+      reg = <0x50c00000 0x10000>;
+      interrupts = <0 0 0x4>;
     };
 	};
 };
