luoxq: disble printk and early_printk to fast booting
git-svn-id: file:///opt/svnrepo/mapu/toolchains/trunk@414 cb94f8c2-beb9-42d2-aaaf-6dc30ea5c36a

Former-commit-id: 3dbd2607cb83ff5d1b75d3f0be8f5a8c1922211d

--- a/kernel/.config
+++ b/kernel/.config
@@ -103,7 +103,7 @@ CONFIG_UID16=y
 CONFIG_KALLSYMS=y
 CONFIG_KALLSYMS_ALL=y
 CONFIG_HOTPLUG=y
-CONFIG_PRINTK=y
+# CONFIG_PRINTK is not set
 CONFIG_BUG=y
 CONFIG_ELF_CORE=y
 CONFIG_BASE_FULL=y
@@ -1158,7 +1158,6 @@ CONFIG_NLS_UTF8=y
 #
 # Kernel hacking
 #
-CONFIG_PRINTK_TIME=y
 CONFIG_DEFAULT_MESSAGE_LOGLEVEL=4
 # CONFIG_ENABLE_WARN_DEPRECATED is not set
 CONFIG_ENABLE_MUST_CHECK=y
@@ -1210,7 +1209,6 @@ CONFIG_DEBUG_LIST=y
 # CONFIG_DEBUG_NOTIFIERS is not set
 # CONFIG_DEBUG_CREDENTIALS is not set
 CONFIG_FRAME_POINTER=y
-CONFIG_BOOT_PRINTK_DELAY=y
 # CONFIG_RCU_TORTURE_TEST is not set
 # CONFIG_RCU_TRACE is not set
 # CONFIG_BACKTRACE_SELF_TEST is not set
@@ -1251,7 +1249,6 @@ CONFIG_FTRACE_MCOUNT_RECORD=y
 # CONFIG_FTRACE_STARTUP_TEST is not set
 CONFIG_RING_BUFFER_BENCHMARK=y
 CONFIG_BUILD_DOCSRC=y
-# CONFIG_DYNAMIC_DEBUG is not set
 # CONFIG_DMA_API_DEBUG is not set
 CONFIG_ATOMIC64_SELFTEST=y
 # CONFIG_SAMPLES is not set
@@ -1260,11 +1257,7 @@ CONFIG_TEST_KSTRTOX=y
 CONFIG_STRICT_DEVMEM=y
 CONFIG_OLD_MCOUNT=y
 # CONFIG_DEBUG_USER is not set
-CONFIG_DEBUG_LL=y
-CONFIG_DEBUG_LL_UART_NONE=y
-# CONFIG_DEBUG_ICEDCC is not set
-# CONFIG_DEBUG_SEMIHOSTING is not set
-CONFIG_EARLY_PRINTK=y
+# CONFIG_DEBUG_LL is not set
 # CONFIG_OC_ETM is not set
 
 #
