wanglei: change MapuMem debug flag
git-svn-id: file:///opt/svnrepo/mapu/toolchains/trunk@442 cb94f8c2-beb9-42d2-aaaf-6dc30ea5c36a

Former-commit-id: d75d6f439f673de59ce091b132665e6fe510b42a

--- a/MaPUSim/APC/src/cpu/inorder/SConscript
+++ b/MaPUSim/APC/src/cpu/inorder/SConscript
@@ -66,6 +66,7 @@ if 'InOrderCPU' in env['CPU_MODELS']:
         DebugFlag('MapuPipeStages')
         DebugFlag('MapuDisasm')
         DebugFlag('MapuReg')
+        DebugFlag('MapuMem')
 
         CompoundFlag('InOrderCPUAll', [ 'InOrderStage', 'InOrderStall', 'InOrderCPU',
                'InOrderMDU', 'InOrderAGEN', 'InOrderFetchSeq', 'InOrderTLB', 'InOrderBPred',
@@ -73,7 +74,7 @@ if 'InOrderCPU' in env['CPU_MODELS']:
                'InOrderGraduation', 'InOrderCachePort', 'RegDepMap', 'Resource',
                'InOrderStall','ThreadModel', 'AddrDep'])
                
-        CompoundFlag('MapuGUI', ['MapuReg', 'MapuPipeStages'])
+        CompoundFlag('MapuGUI', ['MapuReg', 'MapuPipeStages', 'MapuMem'])
 
         Source('inorder_dyn_inst.cc')
         Source('inorder_cpu_builder.cc')
