luoxq: add 3lvl support to u-boot 2015.10
git-svn-id: file:///opt/svnrepo/mapu/toolchains/trunk@515 cb94f8c2-beb9-42d2-aaaf-6dc30ea5c36a

Former-commit-id: dc970e47a23ce613bf8bda21f66288f91e29b889

--- a/u-boot/Makefile
+++ b/u-boot/Makefile
@@ -672,7 +672,7 @@ libs-y += $(if $(BOARDDIR),board/$(BOARDDIR)/)
 
 libs-y := $(sort $(libs-y))
 
-u-boot-dirs	:= $(patsubst %/,%,$(filter %/, $(libs-y))) tools examples
+u-boot-dirs	:= $(patsubst %/,%,$(filter %/, $(libs-y))) tools examples app
 
 u-boot-alldirs	:= $(sort $(u-boot-dirs) $(patsubst %/,%,$(filter %/, $(libs-))))
 
@@ -1195,7 +1195,8 @@ tools: prepare
 $(filter-out tools, $(u-boot-dirs)): tools
 # The "examples" conditionally depend on U-Boot (say, when USE_PRIVATE_LIBGCC
 # is "yes"), so compile examples after U-Boot is compiled.
-examples: $(filter-out examples, $(u-boot-dirs))
+examples app: $(filter-out app, $(filter-out examples, $(u-boot-dirs)))
+
 
 define filechk_uboot.release
 	echo "$(UBOOTVERSION)$$($(CONFIG_SHELL) $(srctree)/scripts/setlocalversion $(srctree))"
