--- a/u-boot/common/Makefile
+++ b/u-boot/common/Makefile
@@ -290,5 +290,6 @@ obj-y += command.o
 obj-y += s_record.o
 obj-y += xyzModem.o
 obj-y += cmd_disk.o
+obj-y += apc/
 
 CFLAGS_env_embedded.o := -Wa,--no-warn -DENV_CRC=$(shell tools/envcrc 2>/dev/null)
