--- a/u-boot/Makefile
+++ b/u-boot/Makefile
@@ -672,7 +672,11 @@ libs-y += $(if $(BOARDDIR),board/$(BOARDDIR)/)
 
 libs-y := $(sort $(libs-y))
 
-u-boot-dirs	:= $(patsubst %/,%,$(filter %/, $(libs-y))) tools examples app
+u-boot-dirs	:= $(patsubst %/,%,$(filter %/, $(libs-y))) tools examples 
+
+ifeq ($(CONFIG_APP),y)
+  u-boot-dirs += app
+endif
 
 u-boot-alldirs	:= $(sort $(u-boot-dirs) $(patsubst %/,%,$(filter %/, $(libs-))))
 
@@ -1195,8 +1199,12 @@ tools: prepare
 $(filter-out tools, $(u-boot-dirs)): tools
 # The "examples" conditionally depend on U-Boot (say, when USE_PRIVATE_LIBGCC
 # is "yes"), so compile examples after U-Boot is compiled.
-examples app: $(filter-out app, $(filter-out examples, $(u-boot-dirs)))
 
+ifeq ($(CONFIG_APP),y)
+  examples app: $(filter-out app, $(filter-out examples, $(u-boot-dirs)))
+else
+  examples: $(filter-out examples, $(u-boot-dirs))
+endif
 
 define filechk_uboot.release
 	echo "$(UBOOTVERSION)$$($(CONFIG_SHELL) $(srctree)/scripts/setlocalversion $(srctree))"
