luoxq: update boot_rom to match MaPU chip
git-svn-id: file:///opt/svnrepo/mapu/toolchains/trunk@544 cb94f8c2-beb9-42d2-aaaf-6dc30ea5c36a

Former-commit-id: 595279548bf09016e05eadc841203c0082d47827

--- a/boot_rom/Makefile
+++ b/boot_rom/Makefile
@@ -17,7 +17,7 @@ SRC = $(TARGET).c
 
 # List C source files here which must be compiled in ARM-Mode.
 # use file-extension c for "c-only"-files
-SRCARM = lowlevel_init.c exit.c dma_ctrl.c
+SRCARM = lowlevel_init.c exit.c dma_ctrl.c ddr_param.c
 
 # List Assembler source files here.
 # Make them always end in a capital .S.  Files ending in a lowercase .s
