luoxq update uboot to match MaPU chip
git-svn-id: file:///opt/svnrepo/mapu/toolchains/trunk@545 cb94f8c2-beb9-42d2-aaaf-6dc30ea5c36a

Former-commit-id: 72ce384c6856c0837358dca47e52dae93c1298d0

--- a/u-boot/board/casia/mapu/Kconfig
+++ b/u-boot/board/casia/mapu/Kconfig
@@ -9,8 +9,27 @@ config SYS_BOARD
 config SYS_VENDOR
 	default "casia"
 
+choice 
+  prompt "MaPU SOC Type"
+  config  MAPU_SIM
+    bool  "mapu_sim"
+    help  
+      This target is used for MaPU Simulator
+  config  MAPU_CHIP
+    bool  "mapu_chip"
+    help
+      This target is used for MaPU Physical chip
+endchoice
+
+if MAPU_SIM
 config SYS_CONFIG_NAME
-	default "mapu_a8"
+  default "mapu_sim"
+endif
+
+if MAPU_CHIP
+config SYS_CONFIG_NAME
+  default "mapu_chip"  
+endif
 
 endif
 
