--- a/kernel/arch/arm/boot/dts/mapu_sim.dts
+++ b/kernel/arch/arm/boot/dts/mapu_sim.dts
@@ -75,7 +75,7 @@
 		#size-cells = <1>;
     interrupt-parent = <&gic>;
 		ranges;
-
+/*
 	  uart0: uart@50900000 {
 		  compatible = "snps,dw-apb-uart";
 		  reg = <0x50900000 0x1000>;
@@ -84,7 +84,16 @@
 		  reg-shift = <2>;
 			reg-io-width = <4>;
 		};
-
+*/
+/* Match MaPU chip*/
+    uart0: uart@50920000 {
+      compatible = "snps,dw-apb-uart";
+      reg = <0x50920000 0x1000>;
+      interrupts = <0 2 0x4>;
+      clock-frequency = <308641>;
+      reg-shift = <2>;
+      reg-io-width = <4>;
+    };
     sdc: sdhci@50d00000 {
 	    compatible = "iacas,mapu-sdhci";
 	    reg = <0x50d00000 0x200>;
