shisq: added .h dependency, fixed generation of libs
git-svn-id: file:///opt/svnrepo/mapu/toolchains/trunk@577 cb94f8c2-beb9-42d2-aaaf-6dc30ea5c36a

Former-commit-id: c8e825c4308f7e852edec49a1c93229bfe03efda

--- a/pocl/user-library/Makefile.env
+++ b/pocl/user-library/Makefile.env
@@ -10,7 +10,7 @@
 CC:=arm-linux-gnueabihf-gcc
 CXX:=arm-linux-gnueabihf-g++
 MAKE:=make
-AR:=ar cr
+AR:=ar crs
 RM:=rm -rf
 
 CFLAGS+= -I"$(TOPDIR)/include" -I"$(TOPDIR)/../.." $(DEBUG_OPTIONS)
@@ -21,6 +21,7 @@ C_EXTENSION?=.c
 CXX_EXTENSION?=.cpp
 
 BUILD_PATH:=$(subst src,build,$(CURDIR))
+BUILD_PATH:=$(subst $(shell readlink -f $(TOPDIR)),$(TOPDIR),$(BUILD_PATH))
 BIN_PATH?=$(TOPDIR)/bin
 LIB_PATH?=$(TOPDIR)/lib
 
@@ -32,8 +33,7 @@ ifneq ($(LIB),)
 ifneq ($(lib_dirs),)
 LIB_SOURCE_LIBS:=$(lib_dirs)
 else
-LIB_SOURCE_LIBS:=$(SUBDIRS) 
-LIB_SOURCE_LIBS+= . 
+LIB_SOURCE_LIBS:= . $(SUBDIRS)
 LIB_SOURCE_LIBS:=$(filter-out $(lib_exclude_dirs),$(LIB_SOURCE_LIBS))
 endif
 endif
@@ -49,38 +49,49 @@ CXX_SRCS:=$(wildcard *$(CXX_EXTENSION))
 C_OBJS:=$(C_SRCS:%$(C_EXTENSION)=$(BUILD_PATH)/%.o)
 CXX_OBJS:=$(CXX_SRCS:%$(CXX_EXTENSION)=$(BUILD_PATH)/%.o)
 
-OBJS:=$(C_OBJS)
-OBJS+=$(CXX_OBJS)
+C_DEPENDS:=$(C_SRCS:%$(C_EXTENSION)=$(BUILD_PATH)/%.d)
+CXX_DEPENDS:=$(CXX_SRCS:%$(CXX_EXTENSION)=$(BUILD_PATH)/%.d)
 
-$(warning C_EXTENSION [$(C_EXTENSION)])
-$(warning CXX_EXTENSION [$(CXX_EXTENSION)])
-$(warning BUILD_PATH [$(BUILD_PATH)])
-$(warning BIN_PATH [$(BIN_PATH)])
-$(warning SUBDIRS [$(SUBDIRS)])
-$(warning C_SRCS [$(C_SRCS)])
-$(warning C_OBJS [$(C_OBJS)])
-$(warning CXX_SRCS [$(CXX_SRCS)])
-$(warning CXX_OBJS [$(CXX_OBJS)])
-$(warning TARGET [$(TARGET)])
-$(warning CFLAGS [$(CFLAGS)])
-$(warning CXXFLAGS [$(CXXFLAGS)])
-$(warning LDFLAGS [$(LDFLAGS)])
-$(warning LIB [$(LIB)])
-$(warning OBJS [$(OBJS)])
-$(warning TARGET [$(TARGET)])
-$(warning CC [$(CC)])
-$(warning CXX [$(CXX)])
-$(warning SUB_LIBS [$(SUB_LIBS)])
-$(warning LIB_SOURCE_LIBS [$(LIB_SOURCE_LIBS)])
-$(warning TEST_PATH [$(subst src,xxx,$(BUILD_PATH))])
+DEPENDS:=$(C_DEPENDS) $(CXX_DEPENDS)
+
+OBJS:=$(C_OBJS) $(CXX_OBJS)
+
+#$(warning C_EXTENSION [$(C_EXTENSION)])
+#$(warning CXX_EXTENSION [$(CXX_EXTENSION)])
+#$(warning BUILD_PATH [$(BUILD_PATH)])
+#$(warning BIN_PATH [$(BIN_PATH)])
+#$(warning SUBDIRS [$(SUBDIRS)])
+#$(warning C_SRCS [$(C_SRCS)])
+#$(warning C_OBJS [$(C_OBJS)])
+#$(warning C_DEPENDS [$(C_DEPENDS)])
+#$(warning CXX_SRCS [$(CXX_SRCS)])
+#$(warning CXX_OBJS [$(CXX_OBJS)])
+#$(warning CXX_DEPENDS [$(CXX_DEPENDS)])
+#$(warning TARGET [$(TARGET)])
+#$(warning CFLAGS [$(CFLAGS)])
+#$(warning CXXFLAGS [$(CXXFLAGS)])
+#$(warning LDFLAGS [$(LDFLAGS)])
+#$(warning LIB [$(LIB)])
+#$(warning OBJS [$(OBJS)])
+#$(warning DEPENDS [$(DEPENDS)])
+#$(warning TARGET [$(TARGET)])
+#$(warning CC [$(CC)])
+#$(warning CXX [$(CXX)])
+#$(warning SUB_LIBS [$(SUB_LIBS)])
+#$(warning LIB_SOURCE_LIBS [$(LIB_SOURCE_LIBS)])
 
 ifneq ($(subst src,xxx,$(CURDIR)),$(CURDIR))
-all: init subdirs build lib target
+all: init build lib target subdirs
 else
 all: subdirs
 endif
 
-build : $(BUILD_PATH)/builtin.a
+build : $(SUB_LIBS) $(BUILD_PATH)/builtin.a
+
+$(SUB_LIBS): 
+	for dir in $(SUBDIRS);\
+	do $(MAKE) -C $$dir init build TOPDIR=$(TOPDIR)/.. ||exit 1;\
+	done
 
 ifeq ($(TARGET),)
 target:
@@ -95,34 +106,71 @@ lib:
 else
 lib: $(LIB_PATH)/lib$(LIB).a $(LIB_PATH)/lib$(LIB).so
 $(LIB_PATH)/lib$(LIB).a: $(LIB_SOURCE_LIBS)
-	$(AR) $@ $^
-	
-$(LIB_PATH)/lib$(LIB).so:$(LIB_SOURCE_LIBS)
-	$(CXX) -shared -fpic $(CXXFLAGS) $^ -o $@
+	cd $(BUILD_PATH)
+	for lib in $(LIB_SOURCE_LIBS);\
+	do ar x $$lib ;\
+	$(AR) $@ `ar t $$lib` ;\
+	$(RM) `ar t $$lib` ;\
+	done
+	chmod 777 $@
+
+$(LIB_PATH)/lib$(LIB).so:$(LIB_SOURCE_LIBS) 
+	cd $(BUILD_PATH)
+	mkdir .make.so
+	for lib in $(LIB_SOURCE_LIBS);\
+	do ar x $$lib ;\
+	mv `ar t $$lib` .make.so ; \
+	done
+	$(CXX) -shared -fpic $(CXXFLAGS) .make.so/*.o -o $@
+	chmod 777 $@
+	$(RM) .make.so ;
 endif
 
 init: 
 	mkdir -p $(BUILD_PATH) $(BIN_PATH)
 
 $(BUILD_PATH)/builtin.a :$(OBJS) $(SUB_LIBS)
-	$(AR) $@ $^
-
+	cd $(BUILD_PATH)
+	for lib in $(SUB_LIBS);\
+	do ar x $$lib ;\
+	$(AR) $@ `ar t $$lib` ;\
+	$(RM) `ar t $$lib` ;\
+	done
+	$(AR) $@ $(OBJS)
+	chmod 777 $@
+	
 subdirs:
 	for dir in $(SUBDIRS);\
 	do $(MAKE) -C $$dir all TOPDIR=$(TOPDIR)/.. ||exit 1;\
 	done
 
 $(C_OBJS):$(BUILD_PATH)/%.o : %$(C_EXTENSION)
-	$(CC) -c -fpic $^ $(CFLAGS) -o $@
-
+	$(CC) -c -fpic $< $(CFLAGS) -o $@
+	chmod 777 $@
+	
 $(CXX_OBJS):$(BUILD_PATH)/%.o : %$(CXX_EXTENSION)
-	$(CXX) -c -fpic $^ $(CXXFLAGS) -o $@
+	$(CXX) -c -fpic $< $(CXXFLAGS) -o $@
+	chmod 777 $@
+	
+-include $(DEPENDS)
 
+$(C_DEPENDS):$(BUILD_PATH)/%.d : %$(C_EXTENSION)
+	set -e; rm -f $@; \
+	$(CC) -MM $(CFLAGS) $< > $@.$$$$; \
+	sed 's,\($*\)\.o[:]*,$(BUILD_PATH)/\1.o $@:,g' < $@.$$$$ > $@; \
+	rm $@.$$$$
+	
+$(CXX_DEPENDS):$(BUILD_PATH)/%.d : %$(CXX_EXTENSION)
+	set -e; rm -f $@; \
+	$(CXX) -MM $(CXXFLAGS) $< > $@.$$$$; \
+	sed 's,\($*\)\.o[:]*,$(BUILD_PATH)/\1.o $@:,g' < $@.$$$$ > $@; \
+	rm $@.$$$$
+	
 clean:
 	for dir in $(SUBDIRS);\
 	do  $(MAKE) -C $$dir TOPDIR=$(TOPDIR)/.. clean||exit 1;\
 	done
-	$(RM) $(BUILD_PATH)/builtin.a $(BUILD_PATH)/*.o
+	$(RM) $(BUILD_PATH)/builtin.a $(OBJS) $(DEPENDS)
 	if [ -n "$(TARGET)" ] ; then $(RM) $(BIN_PATH)/$(TARGET) ; fi
 	if [ -n "$(LIB)" ] ; then $(RM) $(LIB_PATH)/lib$(LIB).a $(LIB_PATH)/lib$(LIB).so ; fi
 	
