--- a/pocl/user-library/src/Makefile
+++ b/pocl/user-library/src/Makefile
@@ -1,7 +1,4 @@
-LDFLAGS:= -lpthread -lelf -lmapu
-
-TARGET:=test
 LIB:=mapu
-lib_exclude_dirs:= test
+lib_exclude_dirs:= testbench
 
 include $(TOPDIR)/Makefile.env
