--- a/pocl/user-library/Makefile.env
+++ b/pocl/user-library/Makefile.env
@@ -1,6 +1,6 @@
 ###########  MakeFile.env  ##########
 # Top level pattern, include by Makefile of child directory
-# in which variable like TOPDIR, TARGET or LIB may be needed
+# in which variable like TOPDIR, TARGET or LIBS may be needed
 # 
 # 1. 源文件目录src，模块xxx放在src/xxx下，主程序在src下
 # 2. 头文件放在include目录下，模块xxx的头文件放在include/xxx目录下
@@ -9,6 +9,7 @@
 
 CC:=arm-linux-gnueabihf-gcc
 CXX:=arm-linux-gnueabihf-g++
+LD:=arm-linux-gnueabihf-ld
 MAKE:=make
 AR:=ar crs
 RM:=rm -rf
@@ -20,8 +21,7 @@ LDFLAGS+= -L"$(TOPDIR)/lib"
 C_EXTENSION?=.c
 CXX_EXTENSION?=.cpp
 
-BUILD_PATH:=$(subst src,build,$(CURDIR))
-BUILD_PATH:=$(subst $(shell readlink -f $(TOPDIR)),$(TOPDIR),$(BUILD_PATH))
+BUILD_PATH:=$(subst $(shell readlink -f $(TOPDIR)),$(TOPDIR)/build,$(CURDIR))
 BIN_PATH?=$(TOPDIR)/bin
 LIB_PATH?=$(TOPDIR)/lib
 
@@ -29,19 +29,7 @@ SUBDIRS:=$(shell find . -maxdepth 1 -type d)
 SUBDIRS:=$(basename $(patsubst ./%,%,$(SUBDIRS)))
 SUBDIRS:=$(filter-out $(exclude_dirs),$(SUBDIRS))
 
-ifneq ($(LIB),)
-ifneq ($(lib_dirs),)
-LIB_SOURCE_LIBS:=$(lib_dirs)
-else
-LIB_SOURCE_LIBS:= . $(SUBDIRS)
-LIB_SOURCE_LIBS:=$(filter-out $(lib_exclude_dirs),$(LIB_SOURCE_LIBS))
-endif
-endif
-
-LIB_SOURCE_LIBS:=$(patsubst %,$(BUILD_PATH)/%/builtin.a,$(LIB_SOURCE_LIBS))
-
-SUB_LIBS:=$(patsubst %,$(BUILD_PATH)/%/builtin.a,$(SUBDIRS))
-SUBDIRS:=$(patsubst %,%,$(SUBDIRS))
+SUB_OBJS:=$(SUBDIRS:%=$(BUILD_PATH)/%/builtin.o)
 
 C_SRCS:=$(wildcard *$(C_EXTENSION))
 CXX_SRCS:=$(wildcard *$(CXX_EXTENSION))
@@ -55,6 +43,11 @@ CXX_DEPENDS:=$(CXX_SRCS:%$(CXX_EXTENSION)=$(BUILD_PATH)/%.d)
 DEPENDS:=$(C_DEPENDS) $(CXX_DEPENDS)
 
 OBJS:=$(C_OBJS) $(CXX_OBJS)
+
+TARGET:=$(patsubst %,$(BIN_PATH)/%,$(TARGET))
+LIB_SO:= $(patsubst %,$(LIB_PATH)/lib%.so,$(LIB_NAME))
+LIB_A:=$(patsubst %,$(LIB_PATH)/lib%.a,$(LIB_NAME))
+LIBS:= $(LIB_A) $(LIB_SO)
 
 #$(warning C_EXTENSION [$(C_EXTENSION)])
 #$(warning CXX_EXTENSION [$(CXX_EXTENSION)])
@@ -71,78 +64,59 @@ OBJS:=$(C_OBJS) $(CXX_OBJS)
 #$(warning CFLAGS [$(CFLAGS)])
 #$(warning CXXFLAGS [$(CXXFLAGS)])
 #$(warning LDFLAGS [$(LDFLAGS)])
-#$(warning LIB [$(LIB)])
+#$(warning LIBS [$(LIBS)])
 #$(warning OBJS [$(OBJS)])
+#$(warning SUB_OBJS [$(SUB_OBJS)])
 #$(warning DEPENDS [$(DEPENDS)])
 #$(warning TARGET [$(TARGET)])
 #$(warning CC [$(CC)])
 #$(warning CXX [$(CXX)])
-#$(warning SUB_LIBS [$(SUB_LIBS)])
-#$(warning LIB_SOURCE_LIBS [$(LIB_SOURCE_LIBS)])
 
-ifneq ($(subst src,xxx,$(CURDIR)),$(CURDIR))
-all: init build lib target subdirs
-else
-all: subdirs
-endif
+all: init build lib target
 
-build : $(SUB_LIBS) $(BUILD_PATH)/builtin.a
-
-$(SUB_LIBS): 
-	for dir in $(SUBDIRS);\
-	do $(MAKE) -C $$dir init build TOPDIR=$(TOPDIR)/.. ||exit 1;\
-	done
-
-ifeq ($(TARGET),)
-target:
-else
-target: $(BIN_PATH)/$(TARGET)
-$(BIN_PATH)/$(TARGET): $(OBJS) $(SUB_LIBS)
-	$(CXX) $^ $(LDFLAGS) -o $@
-endif
-
-ifeq ($(LIB),)
-lib: 
-else
-lib: $(LIB_PATH)/lib$(LIB).a $(LIB_PATH)/lib$(LIB).so
-$(LIB_PATH)/lib$(LIB).a: $(LIB_SOURCE_LIBS)
-	cd $(BUILD_PATH)
-	for lib in $(LIB_SOURCE_LIBS);\
-	do ar x $$lib ;\
-	$(AR) $@ `ar t $$lib` ;\
-	$(RM) `ar t $$lib` ;\
-	done
-	chmod 777 $@
-
-$(LIB_PATH)/lib$(LIB).so:$(LIB_SOURCE_LIBS) 
-	cd $(BUILD_PATH)
-	mkdir .make.so
-	for lib in $(LIB_SOURCE_LIBS);\
-	do ar x $$lib ;\
-	mv `ar t $$lib` .make.so ; \
-	done
-	$(CXX) -shared -fpic $(CXXFLAGS) .make.so/*.o -o $@
-	chmod 777 $@
-	$(RM) .make.so ;
-endif
-
-init: 
+init: sub_init
 	mkdir -p $(BUILD_PATH) $(BIN_PATH)
-
-$(BUILD_PATH)/builtin.a :$(OBJS) $(SUB_LIBS)
-	cd $(BUILD_PATH)
-	for lib in $(SUB_LIBS);\
-	do ar x $$lib ;\
-	$(AR) $@ `ar t $$lib` ;\
-	$(RM) `ar t $$lib` ;\
+	
+sub_init:
+	for dir in $(SUBDIRS);\
+	do $(MAKE) -C $$dir init TOPDIR=$(TOPDIR)/.. ||exit 1;\
 	done
-	$(AR) $@ $(OBJS)
+	
+build : sub_build $(BUILD_PATH)/builtin.o
+
+$(BUILD_PATH)/builtin.o :$(OBJS) $(SUB_OBJS)
+	$(LD) -r $^ -o $@
 	chmod 777 $@
 	
-subdirs:
+sub_build: 
 	for dir in $(SUBDIRS);\
-	do $(MAKE) -C $$dir all TOPDIR=$(TOPDIR)/.. ||exit 1;\
+	do $(MAKE) -C $$dir build TOPDIR=$(TOPDIR)/.. ||exit 1;\
 	done
+	
+lib: sub_lib $(LIBS)
+
+sub_lib: 
+	for dir in $(SUBDIRS);\
+	do $(MAKE) -C $$dir lib TOPDIR=$(TOPDIR)/.. ||exit 1;\
+	done
+	
+$(LIB_A): $(BUILD_PATH)/builtin.o
+	$(AR) $@ $< ;\
+	chmod 777 $@
+
+$(LIB_SO): $(BUILD_PATH)/builtin.o
+	$(CXX) -shared -fpic $(CXXFLAGS) $< -o $@
+	chmod 777 $@
+	
+target : sub_target $(TARGET)
+
+sub_target: 
+	for dir in $(SUBDIRS);\
+	do $(MAKE) -C $$dir target TOPDIR=$(TOPDIR)/.. ||exit 1;\
+	done
+	
+$(TARGET): $(OBJS) $(SUB_OBJS)
+	$(CXX) $^ $(LDFLAGS) -o $@
 
 $(C_OBJS):$(BUILD_PATH)/%.o : %$(C_EXTENSION)
 	$(CC) -c -fpic $< $(CFLAGS) -o $@
@@ -170,9 +144,7 @@ clean:
 	for dir in $(SUBDIRS);\
 	do  $(MAKE) -C $$dir TOPDIR=$(TOPDIR)/.. clean||exit 1;\
 	done
-	$(RM) $(BUILD_PATH)/builtin.a $(OBJS) $(DEPENDS)
-	if [ -n "$(TARGET)" ] ; then $(RM) $(BIN_PATH)/$(TARGET) ; fi
-	if [ -n "$(LIB)" ] ; then $(RM) $(LIB_PATH)/lib$(LIB).a $(LIB_PATH)/lib$(LIB).so ; fi
+	$(RM) $(BUILD_PATH)/builtin.o $(OBJS) $(DEPENDS) $(TARGET) $(LIBS)
 	
 tags:
 	ctags -R
@@ -183,4 +155,4 @@ help:
 	@echo " tags			 - create ctags for vimeditor"
 	@echo " help			 - print help information"
 
-.PHONY: build init subdirs lib clean all msg tags help target
+.PHONY: build sub_build init sub_init lib sub_lib clean all msg tags help target sub_target
