--- a/MaPUSim/ARM-QEMU/hw/timer/Makefile.objs
+++ b/MaPUSim/ARM-QEMU/hw/timer/Makefile.objs
@@ -7,6 +7,7 @@ common-obj-$(CONFIG_HPET) += hpet.o
 common-obj-$(CONFIG_I8254) += i8254_common.o i8254.o
 common-obj-$(CONFIG_M48T59) += m48t59.o
 common-obj-$(CONFIG_PL031) += pl031.o
+common-obj-$(CONFIG_DW_APB_RTC) += dw_apb_rtc.o
 common-obj-$(CONFIG_PUV3) += puv3_ost.o
 common-obj-$(CONFIG_TWL92230) += twl92230.o
 common-obj-$(CONFIG_XILINX) += xilinx_timer.o
