--- a/kernel/arch/arm/boot/dts/mapu_sim.dts
+++ b/kernel/arch/arm/boot/dts/mapu_sim.dts
@@ -124,5 +124,11 @@
       reg = <0x50c00000 0x10000>;
       interrupts = <0 0 0x4>;
     };
+    
+    rtc@50480000 {
+      compatible = "arm,rtc-dw_apb_rtc", "arm,primecell";
+      reg = <0x50480000 0x1000>;
+      interrupts = <0 1 0x4>;
+    };
 	};
 };
