shishq: added mempool, passed testcases in simulator
git-svn-id: file:///opt/svnrepo/mapu/toolchains/trunk@595 cb94f8c2-beb9-42d2-aaaf-6dc30ea5c36a

Former-commit-id: 1048d1ed41563f88846b4853362823b655a9c535

--- a/pocl/user-library/Makefile
+++ b/pocl/user-library/Makefile
@@ -1,4 +1,4 @@
 TOPDIR:=.
-export DEBUG_OPTIONS:= -g3 -Wall
+export DEBUG_OPTIONS:= -g3 -Wall -fpermissive
 exclude_dirs:= include bin build lib 
 include $(TOPDIR)/Makefile.env
