--- a/pocl/user-library/Makefile.env
+++ b/pocl/user-library/Makefile.env
@@ -16,7 +16,7 @@ RM:=rm -rf
 
 CFLAGS+= -I"$(TOPDIR)/include" -I"$(TOPDIR)/../.." $(DEBUG_OPTIONS)
 CXXFLAGS+= -I"$(TOPDIR)/include" -I"$(TOPDIR)/../.." $(DEBUG_OPTIONS)
-LDFLAGS+= -L"$(TOPDIR)/lib" 
+LDFLAGS+= -L"$(TOPDIR)/lib" -static -Wl,-lgcc,-Bstatic
 
 C_EXTENSION?=.c
 CXX_EXTENSION?=.cpp
