--- a/kernel/arch/arm/boot/dts/mapu_chip.dts
+++ b/kernel/arch/arm/boot/dts/mapu_chip.dts
@@ -97,7 +97,7 @@
 	  apc: apc@41000000 {
       	  compatible = "mapu,apc";
           num-apes = <4>;
-          reg = <0x41000000 0x400000>, <0x41400000 0x400000>, <0x41800000 0x400000>, <0x41C00000 0x400000>;
+          reg = <0x41000000 0x400000>, <0x41400000 0x400000>, <0x41800000 0x400000>, <0x41C00000 0x400000>, <0x40400000 0x40000>;
           interrupts = <0 42 0x4>, <0 43 0x4>, <0 44 0x4>, <0 45 0x4>, <0 46 0x4>, <0 47 0x4>, <0 48 0x4>, <0 49 0x4>;
         };  
 	};
